# discord-bot

./: .gitignore  CONTRIBUTING.md  README.md  config-example.toml  justfile  pyproject.toml
.github/workflows/: ci.yml
app/: __main__.py  bot.py  config.py  log.py  status.py
app/components/: accept_invite.py  autoclose.py  close_help_post.py  developer.py  docs.py  hcb_feed.py  lock_old_posts.py  message_filter.py  move_message.py  xkcd_mentions.py
app/components/github_integration/: code_links.py  commit_links.py  commit_types.py  commits.py  models.py
app/components/github_integration/comments/: fetching.py
app/components/github_integration/entities/: cache.py  fmt.py  integration.py  resolution.py
app/components/github_integration/webhooks/: commits.py  discussions.py  integration.py  issues.py  prs.py  utils.py  vouch.py
tests/: test_close_help_post.py  test_webhook.py
tests/meta/: test_mocks.py
tests/utils/: __init__.py  config.py
