[project]
name = "ghostty-discord-bot"
version = "0.1.0"
description = ""
authors = [{ name = "Mitchell Hashimoto", email = "m@mitchellh.com" }]
requires-python = "==3.12.*"
readme = "README.md"
dependencies = [
    "discord-py>=2.4.0,<3",
    "pygithub>=2.3.0,<3",
    "sentry-sdk>=2.3.1,<3",
    "python-dotenv>=1.0.1,<2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4,<0.9",
    "uv>=0.5,<0.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.ruff.lint]
extend-select = ["I", "TID252", "SIM"]
